--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "seed": "ts-node prisma/seed.ts",
     "generate": "npx prisma generate",
     "deploy": "npx prisma migrate deploy",
+    "push": "npx prisma db push",
     "migrate": "npx prisma migrate reset --force && prisma migrate dev"
   },
   "keywords": [],
