--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query-devtools": "^5.66.5",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
+    "@tanstack/react-store": "^0.7.3",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/router-plugin": "^1.114.3",
     "@tanstack/zod-form-adapter": "^0.42.1",
