--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.2",
     "express": "^4.21.2",
     "prisma": "^6.1.0",
@@ -34,6 +35,7 @@
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "multer": "^2.0.2"
   }
 }
