--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "form-data": "^4.0.4",
     "multer": "^2.0.2"
   }
 }
