--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,9 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "express-rate-limit": "^8.2.1",
     "form-data": "^4.0.4",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "zod": "^4.3.5"
   }
 }
